--- a/backend/package.json
+++ b/backend/package.json
@@ -18,7 +18,8 @@
       "express": "^4.21.1",
       "mysql2": "^3.11.3",
       "pg": "^8.13.1",
-      "winston": "^3.11.0"
+      "winston": "^3.11.0",
+      "express-rate-limit": "^6.7.0"
     },
     "devDependencies": {
       "nodemon": "^3.1.0"
